# ground-vehicles-navigation

./: .gitignore  README.md
docker/: Dockerfile  entrypoint  entrypoint.sh  env.sh
src/mpc_control/: CMakeLists.txt  package.xml
src/mpc_control/include/mpc_control/: mpc.hpp  mpc_node.hpp
src/mpc_control/launch/: polaris_gem_mpc.launch
src/mpc_control/src/: mpc.cpp  mpc_main.cpp  mpc_node.cpp
src/mpc_gazebo/: CMakeLists.txt  package.xml
src/mpc_gazebo/config/: gem_gazebo_rviz.rviz  mpc_gazebo_rviz.rviz
src/mpc_gazebo/data/: gps-waypoints.csv  obstacles.csv  waypoints.csv
src/mpc_gazebo/launch/: mpc_demo.launch  mpc_gazebo.launch
src/mpc_gazebo/scripts/: gps_logger.py  mpc_evaluator.py  mpc_sim.py  obstacle_spawner.py
src/mpc_gazebo/urdf/: gem.gazebo  gem.urdf.xacro
