<?xml version="1.0"?>
<package format="2">
  <name>mpc_control</name>
  <version>1.0.0</version>
  <description> The mpc_control package</description>
  <author email="marcello@todo.com"> marcello </author>
  <maintainer email="marcello@todo.com"> marcello </maintainer>
  <license> TODO </license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>
</package>

