<?xml version="1.0"?>
<package format="2">
  <name>mpc_gazebo</name>
  <version>1.0.0</version>
  <description> The mpc_gazebo package</description>
  <author email="marcello@todo.com"> marcello </author>
  <maintainer email="marcello@todo.com"> marcello </maintainer>
  <license> TODO </license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gem_description</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_controller</depend>
  <depend>tf</depend>
</package>

